================== version 2.0.2 ================================
* Now stores config file in .fceultra
* If the .fceultra config directory doesn't exist yet, gfceux will
     now create it.
================== version 2.0.0 ================================
* Supports movie playback
* Support lua script loading
* Supports autoscale
* No longer requires GnomeVFS
* Major code cleanup
* Supports fceux command line options (different syntax from fceu)
* Now requires pygtk >= 2.12
* Transitioned from gtk.glade to gtk.Builder.
* Changed some strings to reflect new email and website
* Fixed and cleaned some stuff with the glade loading
========================== version 0.6.0 ========================
* Fixed evil no ROM problem.
* Added ALSA support (sort of)
* Fixed join/host problem.
========================== version 0.5.2 ========================
Cleanup:
* Fixed silly hack when forcing GTK event processing.
* Accepted patch from Scott Brown on improved options file system
* Completely reworked glade handling
========================== version 0.5.1 ========================
Bug Fixes:
* Updated chooser filters
* Allow support for loading zipped ROMs
* Network ROM loading works
* Code cleanup
* Strides towards platform independence
* Fixed man page error
========================== version 0.5.0 ========================
Other:
* Added man page
* Shortened menu labels
* General code cleanup
* Advanced tab added
========================== version 0.4.0 ========================
Bug Fixes:
* Correction:  Changed "Alt-Tab for fullscreen" to "Alt-Enter"
Interface:
* Accelerators added to many buttons
* Video tab added
* OpenGL option added in video tab
* Fullscreen option moved into Video tab
* Change "FCE Ultra" strings to "GFCE Ultra"
* Cleaned gamepad buttons
* Icon in window
Internal:
* Made glade interface cleaner
* More effecient use of options struct
* Minor code cleanup
========================== version 0.3.2 ========================
Bug Fixes: